feat(MenuHandlerTest): Commit before full refactor of Scanner/MenuHandler
MenuHandler is still bricked and fully broken, but the general skeleton is there.
This commit is mostly to create a bookmark over how it looked before I start making drastic changes

- Read diary day 3 for more details -